--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
-KERNEL_SOURCE=https://github.com/Diva-Room/Miku_kernel_xiaomi_wayne
-KERNEL_SOURCE_BRANCH=dsu-test
-KERNEL_DEFCONFIG=vendor/wayne_defconfig
+KERNEL_SOURCE=https://github.com/Tkiliay/android_kernel_xiaomi_sdm710
+KERNEL_SOURCE_BRANCH=KernelSU
+KERNEL_DEFCONFIG=vendor/grus_defconfig
 TARGET_ARCH=arm64
 KERNEL_FILE=Image.gz-dtb
 CLANG_VERSION=r450784d
-EXTRA_BUILD_COMMAND:LD=ld.lld
+EXTRA_BUILD_COMMAND:
 DISABLE-LTO=false
 USE_KERNELSU=true
 USE_KPROBES=false
 USE_OVERLAYFS=false
 NEED_DTBO=false
-MAKE_BOOT_IMAGE=true
+MAKE_BOOT_IMAGE=false
 SOURCE_BOOT_IMAGE=https://raw.githubusercontent.com/xiaoleGun/KernelSU_action/main/boot/boot-wayne-from-Miku-UI-latest.img
